tests/baselines/reference/numericIndexerConstrainsPropertyDeclarations.errors.txt
==== tests/cases/compiler/numericIndexerConstrainsPropertyDeclarations.ts (9 errors) ====
    // String indexer types constrain the types of named properties in their containing type
    
    interface MyNumber extends Number {
        foo: number;
    }
    
    class C {
        [x: number]: string;
    
        constructor() { } // ok
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(18,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(20,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
        3.0: MyNumber // error
        ~~~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(21,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
    
        get X() { // ok
            return '';
        }
        set X(v) { } // ok
    
        foo() { 
            return '';
        }
    
        static sa: number; // ok
        static sb: string; // ok
    
        static foo() { } // ok
        static get X() { // ok
            return 1;
        }
    }
    
    interface I {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(50,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
        (): string; // ok
        (x): number // ok
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(55,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
        f: MyNumber; // error
    }
    
    var a: {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(68,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
        (): string; // ok
        (x): number // ok
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~~~~~~~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(73,5): error TS2169: All numerically named properties must be assignable to numeric indexer type 'string'.
        f: MyNumber; // error
    }
    
    // error
    var b: { [x: number]: string; } = {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        a: '',
    ~~~~~~~~~~
        b: 1, 
    ~~~~~~~~~~
        c: () => { }, 
    ~~~~~~~~~~~~~~~~~~
        "d": '', 
    ~~~~~~~~~~~~~
        "e": 1, 
    ~~~~~~~~~~~~
        1.0: '',
    ~~~~~~~~~~~~
        2.0: 1, 
    ~~~~~~~~~~~~
        "3.0": '', 
    ~~~~~~~~~~~~~~~
        "4.0": 1, 
    ~~~~~~~~~~~~~~
        f: <Myn>null, 
    ~~~~~~~~~~~~~~~~~~
            ~~~
!!! numericIndexerConstrainsPropertyDeclarations.ts(88,9): error TS2095: Could not find symbol 'Myn'.
    
    
        get X() { 
    ~~~~~~~~~~~~~~
            return '';
    ~~~~~~~~~~~~~~~~~~
        },
    ~~~~~~
        set X(v) { }, 
    ~~~~~~~~~~~~~~~~~~
        foo() { 
    ~~~~~~~~~~~~
            return '';
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! numericIndexerConstrainsPropertyDeclarations.ts(78,5): error TS2012: Cannot convert '{ a: string; b: number; c: () => void; "d": string; "e": number; 1.0: string; 2.0: number; "3.0": string; "4.0": number; f: any; X: string; foo(): string; [x: number]: {}; }' to '{ [x: number]: string; }':
!!! 	Index signatures of types '{ a: string; b: number; c: () => void; "d": string; "e": number; 1.0: string; 2.0: number; "3.0": string; "4.0": number; f: any; X: string; foo(): string; [x: number]: {}; }' and '{ [x: number]: string; }' are incompatible.